--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,8 @@ logging.level.org.springframework=INFO
 
 # Maximum time static resources should be cached
 spring.resources.cache.cachecontrol.max-age=12h
+
+# HotSwap DevTools
+spring.devtools.livereload.enabled = true
+spring.devtools.restart.enabled = true
+
