--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,6 +42,6 @@ logging.level.org.springframework=INFO
 spring.resources.cache.cachecontrol.max-age=12h
 
 # HotSwap DevTools
-spring.devtools.livereload.enabled = true
-spring.devtools.restart.enabled = true
+#spring.devtools.livereload.enabled = true
+#spring.devtools.restart.enabled = true
 
