--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,6 +45,6 @@ spring.resources.cache.cachecontrol.max-age=12h
 spring.devtools.livereload.enabled = true
 spring.devtools.restart.enabled = true
 
-# REST
+# REST API
 spring.data.rest.base-path: /api
 
