--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,8 +34,8 @@ spring.messages.basename=messages/messages
 management.endpoints.web.exposure.include=*
 
 # Logging
-logging.level.org.springframework=INFO
-# logging.level.org.springframework.web=DEBUG
+#logging.level.org.springframework=INFO
+logging.level.org.springframework.web=DEBUG
 # logging.level.org.springframework.context.annotation=TRACE
 
 # Maximum time static resources should be cached
